# topo-features

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py  sklearn_pipeline.py  tsfresh_integration.py
scripts/: validate_benchmark.py  validate_smoke.py
tests/: test_core.py  test_edge_cases.py  test_tsfresh.py
topofeatures/: __init__.py  _validation.py  core.py  landscape.py  matching.py  null.py  persistence.py  synergy.py  tsfresh_binding.py
video/: explainer.py  narrate.py  narration.md  render.py  scene.html
video/narration_segments/: README.md  act1.txt  act2.txt  act3.txt  act4.txt  act5.txt  act6.txt
