[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topo-features"
version = "0.1.0"
description = "Topological features for time series via persistent homology"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aaron", email = "wobblyagent@gmail.com"}]
keywords = ["topology", "time-series", "persistent-homology", "tda", "feature-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "ripser>=0.6",
    "persim>=0.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
tsfresh = ["tsfresh>=0.20"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Repository = "https://github.com/musicofhel/topo-features"

[tool.hatch.build.targets.wheel]
packages = ["topofeatures"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
